--- a/G8103admon/.project
+++ b/G8103admon/.project
@@ -3,6 +3,7 @@
 	<name>G8103admon</name>
 	<comment></comment>
 	<projects>
+		<project>G8103Database</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
