--- a/G8103wallapop/WebContent/WEB-INF/web.xml
+++ b/G8103wallapop/WebContent/WEB-INF/web.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>WallaTIW</display-name>
+<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
+<web-app id="wallaTIW">
+ <display-name>WallaTIW</display-name>
+ <servlet>
+		<servlet-name>Controller</servlet-name>
+		<display-name>Controller</display-name>
+		<servlet-class>g8103.controller.ControllerServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ControllerServlet</servlet-name>
+		<url-pattern>
+		/controller</url-pattern>
+	</servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  
+	
 </web-app>
