--- a/G8103wallapop/.classpath
+++ b/G8103wallapop/.classpath
@@ -14,5 +14,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/G8103Database"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/G8103admon"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
