--- a/G8103wallapop/.project
+++ b/G8103wallapop/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>G8103wallapop</name>
+	<name>G8103wallapop-static</name>
 	<comment></comment>
 	<projects>
 		<project>G8103</project>
