--- a/G8103Database/.project
+++ b/G8103Database/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>G8103Database</name>
+	<name>G8103Database-static</name>
 	<comment></comment>
 	<projects>
 	</projects>
